@@ -17,9 +17,21 @@
             <MarshallingClass className="org.opensaml.samlext.saml2mdui.impl.DiscoHintsMarshaller"/>
             <UnmarshallingClass className="org.opensaml.samlext.saml2mdui.impl.DiscoHintsUnmarshaller"/>
         </ObjectProvider>
+
+        <ObjectProvider qualifiedName="mdui:DiscoHintsType">
+            <BuilderClass className="org.opensaml.samlext.saml2mdui.impl.DiscoHintsBuilder"/>
+            <MarshallingClass className="org.opensaml.samlext.saml2mdui.impl.DiscoHintsMarshaller"/>
+            <UnmarshallingClass className="org.opensaml.samlext.saml2mdui.impl.DiscoHintsUnmarshaller"/>
+        </ObjectProvider>
         
         <!-- Keywords provider -->
         <ObjectProvider qualifiedName="mdui:Keywords">
+            <BuilderClass className="org.opensaml.samlext.saml2mdui.impl.KeywordsBuilder"/>
+            <MarshallingClass className="org.opensaml.samlext.saml2mdui.impl.KeywordsMarshaller"/>
+            <UnmarshallingClass className="org.opensaml.samlext.saml2mdui.impl.KeywordsUnmarshaller"/>
+        </ObjectProvider>
+
+        <ObjectProvider qualifiedName="mdui:KeywordsType">
             <BuilderClass className="org.opensaml.samlext.saml2mdui.impl.KeywordsBuilder"/>
             <MarshallingClass className="org.opensaml.samlext.saml2mdui.impl.KeywordsMarshaller"/>
             <UnmarshallingClass className="org.opensaml.samlext.saml2mdui.impl.KeywordsUnmarshaller"/>
@@ -66,6 +78,12 @@
             <MarshallingClass className="org.opensaml.samlext.saml2mdui.impl.LogoMarshaller"/>
             <UnmarshallingClass className="org.opensaml.samlext.saml2mdui.impl.LogoUnmarshaller"/>
         </ObjectProvider>
+
+        <ObjectProvider qualifiedName="mdui:LogoType">
+            <BuilderClass className="org.opensaml.samlext.saml2mdui.impl.LogoBuilder"/>
+            <MarshallingClass className="org.opensaml.samlext.saml2mdui.impl.LogoMarshaller"/>
+            <UnmarshallingClass className="org.opensaml.samlext.saml2mdui.impl.LogoUnmarshaller"/>
+        </ObjectProvider>
         
         <!-- PrivacyStatementURL provider -->
         <ObjectProvider qualifiedName="mdui:PrivacyStatementURL">
@@ -76,6 +94,12 @@
         
         <!-- UIInfo provider -->
         <ObjectProvider qualifiedName="mdui:UIInfo">
+            <BuilderClass className="org.opensaml.samlext.saml2mdui.impl.UIInfoBuilder"/>
+            <MarshallingClass className="org.opensaml.samlext.saml2mdui.impl.UIInfoMarshaller"/>
+            <UnmarshallingClass className="org.opensaml.samlext.saml2mdui.impl.UIInfoUnmarshaller"/>
+        </ObjectProvider>
+
+        <ObjectProvider qualifiedName="mdui:UIInfoType">
             <BuilderClass className="org.opensaml.samlext.saml2mdui.impl.UIInfoBuilder"/>
             <MarshallingClass className="org.opensaml.samlext.saml2mdui.impl.UIInfoMarshaller"/>
             <UnmarshallingClass className="org.opensaml.samlext.saml2mdui.impl.UIInfoUnmarshaller"/>
